<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/contenedor_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="0dp"
        app:cardBackgroundColor="@color/colorNormalCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/txt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enslada_hobbitenango"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/nada_como_una_rica_ensalada_acompa_ada_de_un_vino_y_una_incrible_vista"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredientes"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_ingr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lechuga_tomates_pepinos_y_un_toque_secreto"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageView
                android:id="@+id/image"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:contentDescription="@string/adios"
                android:scaleType="centerCrop"
                android:src="@drawable/ensalada" />
        </LinearLayout>


    </android.support.v7.widget.CardView>
</RelativeLayout>